luci-theme-{freifunk-generic,material,openwrt}: z-index fixes
Ensure that open dropdowns cover active tooltips.

--- a/themes/luci-theme-freifunk-generic/htdocs/luci-static/freifunk-generic/cascade.css
+++ b/themes/luci-theme-freifunk-generic/htdocs/luci-static/freifunk-generic/cascade.css
@@ -386,7 +386,7 @@ ul.dropdowns li {
 
 ul.dropdowns li ul {
 	position: absolute;
-	z-index: 1000;
+	z-index: 1100;
 	top: auto;
 	min-width: 10em;
 }
