--- a/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
+++ b/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
@@ -1065,7 +1065,7 @@ td > table > tbody > tr > td,
     border: 1px solid #918e8c;
     box-shadow: 0 0 4px #918e8c;
     position: absolute;
-    z-index: 1000;
+    z-index: 1100;
     max-width: none;
     min-width: 100%;
     width: auto;
