--- a/themes/luci-theme-openwrt/htdocs/luci-static/openwrt.org/cascade.css
+++ b/themes/luci-theme-openwrt/htdocs/luci-static/openwrt.org/cascade.css
@@ -1110,7 +1110,7 @@ ul.cbi-tabmenu li.cbi-tab {
 	border: 1px solid #918e8c;
 	box-shadow: 0 0 4px #918e8c;
 	position: absolute;
-	z-index: 1000;
+	z-index: 1100;
 	max-width: none;
 	min-width: 100%;
 	width: auto;
